# pyfactoring

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.example.toml  pyproject.toml  pyproject.toml.example  requirements.txt  setup.py
pyfactoring/: __init__.py  __main__.py  arguments.py  config.py  exceptions.py  main.py  settings.py
pyfactoring/core/: __init__.py  action_check.py  action_format.py  action_restore.py  analysis.py  cache.py  check.py  format.py  main.py  restore.py  templatedfunc.py
pyfactoring/utils/: __init__.py  collecting.py  extract.py  extracting.py  path.py
pyfactoring/utils/files/: __init__.py  collecting.py  exceptions.py
pyfactoring/utils/pyclones/: __init__.py  clone.py  clonefinder.py  scope.py  templater.py
pyfactoring/utils/pydioms/: __init__.py  ast_inspect.py  ast_types.py  extract_idioms.py  idiom.py  idiomfinder.py  possibleidiom.py  prefixtree.py  pydioms_config.py
test/: __init__.py  conftest.py  perfomance.py
test/samples/: all_nodes.py  class.py  example.txt  file_containing_clone.py
test/samples/chained/: chained_1.py  chained_2.py  chained_3.py
test/samples/function/: function_1.py  function_2.py  function_3.py
test/samples/internal/: internal_1.py  internal_2.py  internal_3.py
test/unit/: test_path.py
test/unit/for/: mocks.py  test_for.py
test/unit/function/: test_function.py
test/unit/if/: mocks.py  test_if.py
test/unit/match/: test_match.py
test/unit/pyclones/: conftest.py  test_clonefinder.py  test_scope.py
test/unit/pydioms/: idiom_1.py  idiom_2.py  test_ast_inspect.py  (+1 more)
(+29 files in other folders)
